--- a/queuing system.css
+++ b/queuing system.css
@@ -103,3 +103,12 @@ table tr td{
 
 
 /* TABLE */
+
+.openRelease {
+    text-decoration: none;
+    color: black;
+}
+
+.openRelease:hover{
+    color: blue;
+}
