--- a/endUser_Webpage.css
+++ b/endUser_Webpage.css
@@ -67,6 +67,7 @@ h3{
     max-width: 50%;
     border: solid;
     z-index: 999;
+    padding-top: -5%;
 }
 
 .risFORM{
@@ -75,6 +76,7 @@ h3{
 }
 
 .stock_number {
+
     width: 80px;
     text-align: center;
     font-family: "Bookman Old Style";
@@ -129,16 +131,16 @@ nav ul{
 }
 
 .entityDeped {
-    margin-bottom: -17.5px;
-    margin-left: -800px;
+    margin-bottom: -2%;
+    margin-right: 80%;
 }
 
 .fundCluster {
-    margin-right: -770px;
+    margin-left: 77%;
 }
 
 .cityDivision {
-    margin-left: -895px;
+    margin-right: 89.7%;
 }
 
 .locationDivision {
@@ -147,8 +149,8 @@ nav ul{
 }
 
 .userOffice {
-    margin-bottom: -17.5px;
-    margin-left: -915px;
+    margin-bottom: -2%;
+    margin-left: -91.7%;
 }
 
 .userOfficePHP {
@@ -158,7 +160,7 @@ nav ul{
 
 .centerCode {
     margin-top: -18px;
-    margin-right: -650px;
+    margin-right: -61.7%;
 }
 
 .centerCodePHP {
@@ -167,7 +169,7 @@ nav ul{
 }
 
 .risNo {
-    margin-left: 710px;
+margin-left: 68%;
 }
 
 
