--- a/usermanagementstyle.css
+++ b/usermanagementstyle.css
@@ -24,9 +24,8 @@ header img{
 
 .searchbar{
     position: absolute;
-    margin-left: 63%;
-    margin-top: -40px;
-    
+    margin-left: 70%;
+    margin-top: -38px; 
 }
 
 .searchbar input{
@@ -38,7 +37,6 @@ header img{
     color: black;
     text-align: center;
     outline: none;
-    
 }
 
 /* Search Bar*/
@@ -139,43 +137,51 @@ ul li:hover ul.settings{
 }
 /* NAV DROPDOWN LIST*/
 
-.queuing{
-    position: absolute;
-    margin: 89px 0px 0px 69.5%; 
-    padding: 15px 0px 0px 0px;
-    width: 7%;
-    height: 4%;
-    border-radius: 7px;
-    background-color: #162fa0;
-    border: 2px solid black;
-    color: white;
-    text-decoration: none;
-    text-align: center;
-    font-size: 13px;
-}
-.queuing:hover{
-    background: grey;
+
+.headerTitles{
+    margin-top: 0;
 }
 
-h1{
-    font-size: 32px;
+.headerTitles h1{
+    font-size: 130%;
     color: white;
     position: absolute;
-    margin-top: -130px;
-    margin-left: 120px;
+    margin-top: -125px;
+    margin-left: 118px;
     
- 
 }
-h2{
+
+.headerTitles h2{
+    font-size: 120%;
+    color: white;
+    position: absolute;
+    margin-top: -120px;
+    margin-left: 120px;
+    font-weight: 100;
+    
+}
+
+.headerTitles h3{
+    font-size: 95%;
+    color: white;
+    position: absolute;
+    margin-top: -120px;
+    margin-left: 120px;
+    font-weight: 100;
+    
+}
+
+.title h2{
+    margin-top: -30px;
     font-size: 40px;
-    margin-left: 590px;
+    margin-left: 40%;
 }
 
 .sorting{
     position: absolute;
     font-size: 18px;
     font-weight: bold;
-    margin: 20px 0px 0px 83%;
+    margin: 10px 0px 0px 83%;
 }
 
 .sorting select{
@@ -233,11 +239,10 @@ table tr td{
 }
 
 .scroll{
-   margin-top: 50px;
+   margin-top: 40px;
     width: 95%;
     height: 450px;
-    overflow-y: scroll;
-    
+    overflow-y: scroll;    
 }
 
 
@@ -509,3 +514,267 @@ table tr td{
 
 
 /* RESPONSIVE WEBSITE */
+@media screen and (max-width: 1440px){
+    .queuing{
+        position: absolute;
+        margin: 89px 0px 0px 68%; 
+        padding: 15px 0px 4px 0px;
+        width: 7%;
+        height: 4%;
+        border-radius: 7px;
+        background-color: #162fa0;
+        border: 2px solid black;
+        color: white;
+        text-decoration: none;
+        text-align: center;
+        font-size: 13px;
+    }
+    .searchbar{
+        position: absolute;
+        margin-left: 68%;
+        margin-top: -38px; 
+    }
+}
+
+@media screen and (max-width: 1360px){
+    .searchbar{
+        position: absolute;
+        margin-left: 67%;
+        margin-top: -38px; 
+    }
+    table{
+        font-size: 20px;
+        margin-left: 160px;
+        width: 87%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+}
+
+@media screen and (max-width: 1320px){
+    .searchbar{
+        position: absolute;
+        margin-left: 865px;
+        margin-top: -38px; 
+    }
+    table{
+        font-size: 20px;
+        margin-left: 145px;
+        width: 87%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+    .sorting{
+        position: absolute;
+        font-size: 18px;
+        font-weight: bold;
+        margin: 10px 0px 0px 81%;
+    }
+}
+
+@media screen and (max-width: 1271px){
+    .searchbar{
+        position: absolute;
+        margin-left: 65%;
+        margin-top: -38px; 
+    }
+    table{
+        font-size: 20px;
+        margin-left: 145px;
+        width: 87%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+}
+
+@media screen and (max-width: 1200px){
+    .searchbar{
+        position: absolute;
+        margin-left: 62%;
+        margin-top: -38px; 
+    }
+    table{
+        font-size: 20px;
+        margin-left: 135px;
+        width: 87%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+    .sorting{
+        position: absolute;
+        font-size: 18px;
+        font-weight: bold;
+        margin: 10px 0px 0px 80%;
+    }
+}
+
+@media screen and (max-width: 992px){
+    .searchbar{
+        position: absolute;
+        margin-left: 640px;
+        margin-top: -20px; 
+    }
+
+    .searchbar input{
+       width: 150px;
+    }
+
+    table{
+        font-size: 20px;
+        margin-left: 110px;
+        width: 87%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+    .sorting{
+        position: absolute;
+        font-size: 18px;
+        font-weight: bold;
+        margin: 10px 0px 0px 760px;
+    }
+    
+    header img{
+        margin-top: 10px;
+        width: 110px;
+    }
+
+    .headerTitles{
+        margin-top: 0;
+    }
+    
+    .headerTitles h1{
+        font-size: 110%;
+        color: white;
+        position: absolute;
+        margin-top: -125px;
+        margin-left: 110px;
+        
+    }
+    
+    .headerTitles h2{
+        font-size: 120%;
+        color: white;
+        position: absolute;
+        margin-top: -120px;
+        margin-left: 110px;
+        font-weight: 100;
+        
+    }
+    
+    .headerTitles h3{
+        font-size: 95%;
+        color: white;
+        position: absolute;
+        margin-top: -120px;
+        margin-left: 110px;
+        font-weight: 100;
+    }
+
+    .title h2{
+        margin-top: -30px;
+        font-size: 40px;
+        margin-left: 300px;
+    }    
+
+    nav{
+        float: right;
+        margin-right: 10px;
+        padding-top: 85px ;
+
+    }
+
+    ul li a{
+        display: block;
+        margin: 15px 0px 0px 0px;
+        padding: 12px 15px;
+        color: white;
+        text-decoration: none;
+        text-align: center;
+        outline: 2px solid black;
+        box-shadow: 2px darkblue;
+        border-radius: 5px;
+        box-sizing: border-box;
+    }
+
+}
+
+@media screen and (max-width: 600px){
+    header img{
+        margin-top: 5px;
+        width: 100px;
+    }
+
+    .headerTitles{
+        margin-top: 0;
+    }
+    
+    .headerTitles h1{
+        font-size: 100%;
+        color: white;
+        position: absolute;
+        margin-top: -135px;
+        margin-left: 100px;
+        
+    }
+    
+    .headerTitles h2{
+        font-size: 120%;
+        color: white;
+        position: absolute;
+        margin-top: -135px;
+        margin-left: 100px;
+        font-weight: 100;
+        
+    }
+    
+    .headerTitles h3{
+        font-size: 95%;
+        color: white;
+        position: absolute;
+        margin-top: -135px;
+        margin-left: 100px;
+        font-weight: 100;
+    }
+    .searchbar{
+        position: absolute;
+        margin-left: 270px;
+        margin-top: 5px; 
+    }
+    .searchbar input{
+        width: 150px;
+        height: 20px;
+     }
+     ul li a{
+        display: block;
+        margin: 25px 0px 0px 0px;
+        padding: 8px 10px;
+        color: white;
+        text-decoration: none;
+        text-align: center;
+        outline: 2px solid black;
+        box-shadow: 2px darkblue;
+        border-radius: 5px;
+        box-sizing: border-box;
+     }
+
+     .title h2{
+        margin-top: -30px;
+        font-size: 40px;
+        margin-left: 100px;
+    }    
+
+    table{
+        font-size: 20px;
+        margin-left: 64px;
+        width: 87%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+}
+
+
+
+
+
+
+
