--- a/queuing system.css
+++ b/queuing system.css
@@ -18,16 +18,48 @@ header img{
     width: 120px;
 }
 
-header h1{
-    font-size: 32px;
+.headerTitles{
+    margin-top: 0;
+}
+
+.headerTitles h1{
+    font-size: 130%;
     color: white;
     position: absolute;
-    margin: -120px 0px 0px 140px;
+    margin-top: -100px;
+    margin-left: 125px;
+    
+}
+
+.headerTitles h2{
+    font-size: 120%;
+    color: white;
+    position: absolute;
+    margin-top: -100px;
+    margin-left: 125px;
+    font-weight: 100;
+    
+}
+
+.headerTitles h3{
+    font-size: 95%;
+    color: white;
+    position: absolute;
+    margin-top: -100px;
+    margin-left: 125px;
+    font-weight: 100;
+    
+}
+
+.title h2{
+    margin-top: 10px;
+    font-size: 40px;
+    margin-left: 40%;
 }
 
 .backbtn{
     float: right;
-    margin-top: 90px;
+    margin-top: -100px;
     margin-right: 30px;
     padding: 15px 15px 15px 15px;
     color: white;
@@ -39,10 +71,7 @@ header h1{
     background: grey;
 }
 
-h2{
-    font-size: 40px;
-    margin-left: 595px;
-}
+
 
 /* TABLE */
 table{
@@ -95,8 +124,8 @@ table tr td{
 .scroll{
    
     width: 1200px;
-    height: 500px;
-    margin-top: 10px;
+    height: 470px;
+    margin-top: 40px;
     overflow-y: scroll;
     margin-left: 50px;
 }
@@ -111,4 +140,229 @@ table tr td{
 
 .openRelease:hover{
     color: blue;
+}
+
+/* RESPONSIVE WEBSITE */
+@media screen and (max-width: 1440px){
+
+}
+
+@media screen and (max-width: 1360px){
+    .backbtn{
+        float: right;
+        margin-top: -100px;
+        margin-right: 30px;
+        padding: 15px 15px 15px 15px;
+        color: white;
+        text-decoration: none;
+        border: 2px solid black;
+        border-radius: 10px;
+    }
+
+    table{
+        font-size: 20px;
+        margin-left:200px;
+        width: 75%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+    .scroll{
+        width: 1200px;
+        height: 470px;
+        margin-top: 40px;
+        overflow-y: scroll;
+        margin-left: 50px;
+    }
+    .title h2{
+        margin-top: 10px;
+        font-size: 40px;
+        margin-left: 36%;
+    }
+}
+
+@media screen and (max-width: 1326px){
+    .title h2{
+        margin-top: 10px;
+        font-size: 40px;
+        margin-left: 38%;
+    }
+}
+
+
+@media screen and (max-width: 1271px){
+    .title h2{
+        margin-top: 10px;
+        font-size: 40px;
+        margin-left: 37%;
+    }
+    table{
+        font-size: 20px;
+        margin-left:180px;
+        width: 75%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+}
+
+@media screen and (max-width: 1200px){
+    table{
+        font-size: 20px;
+        margin-left: 12%;
+        width: 75%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+}
+
+@media screen and (max-width: 992px){
+    table{
+        font-size: 20px;
+        margin-left: 1%;
+        width: 75%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+    .title h2{
+        margin-top: 10px;
+        font-size: 40px;
+        margin-left: 30%;
+    }
+
+}
+
+@media screen and (max-width: 768px){
+    header img{
+        margin-top: 10px;
+        width: 100px;
+    }
+    
+    .headerTitles{
+        margin-top: 0;
+    }
+    
+    .headerTitles h1{
+        font-size: 130%;
+        color: white;
+        position: absolute;
+        margin-top: -90px;
+        margin-left: 110px;
+        
+    }
+    
+    .headerTitles h2{
+        font-size: 120%;
+        color: white;
+        position: absolute;
+        margin-top: -90px;
+        margin-left: 110px;
+        font-weight: 100;
+        
+    }
+    
+    .headerTitles h3{
+        font-size: 95%;
+        color: white;
+        position: absolute;
+        margin-top: -90px;
+        margin-left: 110px;
+        font-weight: 100;
+        
+    }
+    
+    .title h2{
+        margin-top: 10px;
+        font-size: 32px;
+        margin-left: 32%;
+    }
+    .backbtn{
+        float: right;
+        margin-top: -70px;
+        margin-right: 10px;
+        padding: 12px 15px 12px 15px;
+        color: white;
+        text-decoration: none;
+        border: 2px solid black;
+        border-radius: 10px;
+        font-size: 80%;
+    }
+    table{
+        font-size: 20px;
+        margin-left: 4%;
+        width: 50%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+}
+
+@media screen and (max-width: 600px){
+    
+    header img{
+        margin-top: 20px;
+        width: 97px;
+    }
+    
+    .headerTitles{
+        margin-top: 0;
+    }
+    
+    .headerTitles h1{
+        font-size: 130%;
+        color: white;
+        position: absolute;
+        margin-top: -103px;
+        margin-left: 100px;
+        
+    }
+    
+    .headerTitles h2{
+        font-size: 120%;
+        color: white;
+        position: absolute;
+        margin-top: -100px;
+        margin-left: 100px;
+        font-weight: 100;
+        
+    }
+    
+    .headerTitles h3{
+        font-size: 95%;
+        color: white;
+        position: absolute;
+        margin-top: -100px;
+        margin-left: 100px;
+        font-weight: 100;
+        
+    }
+    
+    .title h2{
+        margin-top: 10px;
+        font-size: 29px;
+        margin-left: 32%;
+    }
+    .backbtn{
+        float: right;
+        margin-top: -70px;
+        margin-right: 10px;
+        padding: 10px 15px 10px 15px;
+        color: white;
+        text-decoration: none;
+        border: 2px solid black;
+        border-radius: 10px;
+        font-size: 70%;
+    }
+    table{
+        font-size: 20px;
+        margin-left: 0px;
+        width: 100%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+
+    .scroll{
+        width: 600px;
+        height: 300px;
+        margin-top: 40px;
+        overflow-y: scroll;
+        margin-left: 0px;
+    }
 }
