--- a/usermanagementstyle.css
+++ b/usermanagementstyle.css
@@ -551,7 +551,7 @@ table tr td{
     }
 }
 
-@media screen and (max-width: 1320px){
+@media screen and (max-width: 1326px){
     .searchbar{
         position: absolute;
         margin-left: 865px;
@@ -698,6 +698,91 @@ table tr td{
 
 }
 
+@media screen and (max-width: 768px){
+    header img{
+        margin-top: 5px;
+        width: 100px;
+    }
+
+    .headerTitles{
+        margin-top: 0;
+    }
+    
+    .headerTitles h1{
+        font-size: 100%;
+        color: white;
+        position: absolute;
+        margin-top: -135px;
+        margin-left: 100px;
+        
+    }
+    
+    .headerTitles h2{
+        font-size: 120%;
+        color: white;
+        position: absolute;
+        margin-top: -135px;
+        margin-left: 100px;
+        font-weight: 100;
+        
+    }
+    
+    .headerTitles h3{
+        font-size: 95%;
+        color: white;
+        position: absolute;
+        margin-top: -135px;
+        margin-left: 100px;
+        font-weight: 100;
+    }
+    .searchbar{
+        position: absolute;
+        margin-left: 440px;
+        margin-top: 5px; 
+    }
+    .searchbar input{
+        width: 150px;
+        height: 20px;
+     }
+     ul li a{
+        display: block;
+        margin: 25px 0px 0px 0px;
+        padding: 8px 10px;
+        color: white;
+        text-decoration: none;
+        text-align: center;
+        outline: 2px solid black;
+        box-shadow: 2px darkblue;
+        border-radius: 5px;
+        box-sizing: border-box;
+     }
+
+     .title h2{
+        margin-top: -30px;
+        font-size: 32px;
+        margin-left: 25%;
+    }    
+
+    table{
+        font-size: 20px;
+        margin-left: 12%;
+        width: 87%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+
+    .sorting{
+        position: absolute;
+        font-size: 18px;
+        font-weight: bold;
+        margin: 10px 0px 0px 74%;
+    }
+
+    .sorting select{
+        font-size: 14px;
+    }
+}
+
 @media screen and (max-width: 600px){
     header img{
         margin-top: 5px;
@@ -769,6 +854,46 @@ table tr td{
         width: 87%;
         border: 2px solid black;
         border-collapse: collapse; 
+    }
+}
+
+@media screen and (max-width: 425px){
+    header img{
+        margin-top: 5px;
+        width: 100px;
+    }
+    .searchbar{
+        position: absolute;
+        margin-left: 90px;
+    }
+    .title h2{
+        margin-top: -30px;
+        font-size: 25px;
+        margin-left: 100px;
+    }   
+    table{
+        font-size: 15px;
+        margin-left: 32px;
+        width: 90%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+    .scroll{
+        margin-top: 40px;
+         width: 100%;
+         height: 350px;
+         overflow-y: scroll;    
+     }
+     .sorting{
+        position: absolute;
+        font-size: 15px;
+        font-weight: bold;
+        margin: 14px 0px 0px 66%;
+    }
+    
+    .sorting select{
+        border: 2px solid black;
+        font-size: 12px;
     }
 }
 
