--- a/queuing system.css
+++ b/queuing system.css
@@ -9,7 +9,6 @@ header{
     width: 100%;
     height: 150px;
     background-color: #162fa0;  
-    
 }
 
 
@@ -52,9 +51,10 @@ header img{
 }
 
 .title h2{
-    margin-top: 10px;
+    margin: auto;
     font-size: 40px;
-    margin-left: 40%;
+    text-align: center;
+    justify-content: center;
 }
 
 .backbtn{
@@ -76,22 +76,27 @@ header img{
 /* TABLE */
 table{
     font-size: 20px;
-    margin-left: 293px;
-    width: 75%;
+    margin: auto;
+    width: 100%;
     border: 2px solid black;
     border-collapse: collapse; 
 }
 
 
 .table-number{
-    width: 9%;
+    width: 6.5%;
 }
 
 .table-name{
-    width: 72%;
+    width: 45%;
 }
+
+.table-date{
+    width: 10%;
+}
+
 .table-button-release{
-    width: 30%;
+    width: 15%;
 }
 
 table tr {
@@ -122,12 +127,10 @@ table tr td{
 }
 
 .scroll{
-   
     width: 1200px;
-    height: 470px;
-    margin-top: 40px;
+    height: 500px;
+    margin: auto;
     overflow-y: scroll;
-    margin-left: 50px;
 }
 
 
