--- a/queuing system.css
+++ b/queuing system.css
@@ -53,7 +53,9 @@ header img{
 .title h2{
     text-align: center;
     font-size: 200%;
-    margin-bottom: 1%;
+    margin-top: 20px;
+    margin-bottom: 2%;
+    margin-left: 10%;
 }
 
 .backbtn{
@@ -74,26 +76,26 @@ header img{
 /* TABLE */
 table{
     font-size: 20px;
-    margin: auto;
+    margin-left: 0%;
     width: 100%;
     border: 2px solid black;
     border-collapse: collapse; 
 }
 
 .table-number{
-    width: 6.5%;
+    width: 2%;
 }
 
 .table-name{
-    width: 45%;
+    width: 20%;
 }
 
 .table-date{
-    width: 10%;
+    width: 5%;
 }
 
 .table-button-release{
-    width: 15%;
+    width: 5%;
 }
 
 table tr {
@@ -123,8 +125,8 @@ table tr td{
 }
 
 .scroll{
-    width: 1200px;
-    margin: auto;
+    width: 1000px;
+    margin-left: 18%;
     overflow-y: scroll;
 }
 
@@ -139,95 +141,164 @@ table tr td{
     color: blue;
 }
 
-/* RESPONSIVE WEBSITE */
-@media screen and (max-width: 1440px){
 
-}
-
-@media screen and (max-width: 1360px){
-    .backbtn{
-        float: right;
-        margin-top: -100px;
-        margin-right: 30px;
-        padding: 15px 15px 15px 15px;
-        color: white;
-        text-decoration: none;
-        border: 2px solid black;
-        border-radius: 10px;
-    }
-
+@media screen and (min-width: 2560px){
     table{
         font-size: 20px;
-        margin-left:200px;
-        width: 75%;
+        margin-left: 0%;
+        width: 100%;
         border: 2px solid black;
         border-collapse: collapse; 
     }
     .scroll{
-        width: 1200px;
-        height: 470px;
-        margin-top: 40px;
+        width: 1000px;
+        margin-left: 33%;
         overflow-y: scroll;
-        margin-left: 50px;
     }
+}
+
+@media screen and (max-width: 1440px){
     .title h2{
-        margin-top: 10px;
-        font-size: 40px;
-        margin-left: 36%;
+        text-align: center;
+        font-size: 200%;
+        margin-top: 20px;
+        margin-bottom: 2%;
+        margin-left: 10%;
+    }
+}
+
+@media screen and (max-width: 1367px){
+    .scroll{
+        width: 80%;
+        margin-left: 11%;
+        overflow-y: scroll;
     }
 }
 
 @media screen and (max-width: 1326px){
-    .title h2{
-        margin-top: 10px;
-        font-size: 40px;
-        margin-left: 38%;
+    .scroll{
+        width: 80%;
+        margin-left: 10%;
+        overflow-y: scroll;
     }
 }
 
-
 @media screen and (max-width: 1271px){
-    .title h2{
-        margin-top: 10px;
-        font-size: 40px;
-        margin-left: 37%;
-    }
-    table{
-        font-size: 20px;
-        margin-left:180px;
-        width: 75%;
-        border: 2px solid black;
-        border-collapse: collapse; 
+    .scroll{
+        width: 80%;
+        margin-left: 10%;
+        overflow-y: scroll;
     }
 }
 
 @media screen and (max-width: 1200px){
+    .backbtn{
+        float: right;
+        margin-top: -90px;
+        margin-right: 20px;
+        padding: 12px 15px 12px 15px;
+        color: white;
+        text-decoration: none;
+        border: 2px solid black;
+        border-radius: 10px;
+        font-size: 15px;
+    }
+    .scroll{
+        width: 80%;
+        margin-left: 12%;
+        overflow-y: scroll;
+    }
+}
+
+@media screen and (max-width: 1024px){
     table{
         font-size: 20px;
-        margin-left: 12%;
-        width: 75%;
+        margin-left: 0%;
+        width: 100%;
         border: 2px solid black;
         border-collapse: collapse; 
     }
+    .scroll{
+        width: 850px;
+        margin-left: 10%;
+        overflow-y: scroll;
+    }
+
 }
 
 @media screen and (max-width: 992px){
-    table{
-        font-size: 20px;
-        margin-left: 1%;
-        width: 75%;
-        border: 2px solid black;
-        border-collapse: collapse; 
-    }
-    .title h2{
-        margin-top: 10px;
-        font-size: 40px;
-        margin-left: 30%;
-    }
+
 
 }
 
+
 @media screen and (max-width: 768px){
+    header img{
+        margin-top: 10px;
+        width: 110px;
+    }
+    
+    .headerTitles{
+        margin-top: 0;
+    }
+    
+    .headerTitles h1{
+        font-size: 130%;
+        color: white;
+        position: absolute;
+        margin-top: -100px;
+        margin-left: 120px;
+        
+    }
+    
+    .headerTitles h2{
+        font-size: 120%;
+        color: white;
+        position: absolute;
+        margin-top: -100px;
+        margin-left: 120px;
+        font-weight: 100;
+        
+    }
+    
+    .headerTitles h3{
+        font-size: 95%;
+        color: white;
+        position: absolute;
+        margin-top: -100px;
+        margin-left: 120px;
+        font-weight: 100;
+        
+    }
+    
+    .title h2{
+        text-align: center;
+        font-size: 200%;
+        margin-top: 20px;
+        margin-bottom: 2%;
+        margin-left: 20%;
+    }
+    
+    .backbtn{
+        float: right;
+        margin-top: -80px;
+        margin-right: 10px;
+        padding: 12px 15px 12px 15px;
+        color: white;
+        text-decoration: none;
+        border: 2px solid black;
+        border-radius: 10px;
+        font-size: 15px;
+    }
+    .scroll{
+        width: 650px;
+        margin-left: 9%;
+        overflow-y: scroll;
+    }
+}
+
+
+@media screen and (max-width: 600px){
     header img{
         margin-top: 10px;
         width: 100px;
@@ -238,7 +309,7 @@ table tr td{
     }
     
     .headerTitles h1{
-        font-size: 130%;
+        font-size: 100%;
         color: white;
         position: absolute;
         margin-top: -90px;
@@ -247,16 +318,6 @@ table tr td{
     }
     
     .headerTitles h2{
-        font-size: 120%;
-        color: white;
-        position: absolute;
-        margin-top: -90px;
-        margin-left: 110px;
-        font-weight: 100;
-        
-    }
-    
-    .headerTitles h3{
         font-size: 95%;
         color: white;
         position: absolute;
@@ -266,36 +327,56 @@ table tr td{
         
     }
     
-    .title h2{
-        margin-top: 10px;
-        font-size: 32px;
-        margin-left: 32%;
+    .headerTitles h3{
+        font-size: 90%;
+        color: white;
+        position: absolute;
+        margin-top: -90px;
+        margin-left: 110px;
+        font-weight: 100;
+        
     }
+    
+    .title h2{
+        text-align: center;
+        font-size: 25px;
+        margin-top: 20px;
+        margin-bottom: 2%;
+        margin-left: 9%;
+    }
+    
     .backbtn{
         float: right;
-        margin-top: -70px;
-        margin-right: 10px;
+        margin-top: -65px;
+        margin-right: 15px;
         padding: 12px 15px 12px 15px;
         color: white;
         text-decoration: none;
         border: 2px solid black;
         border-radius: 10px;
-        font-size: 80%;
+        font-size: 12px;
     }
+
     table{
-        font-size: 20px;
-        margin-left: 4%;
-        width: 50%;
+        font-size: 15px;
+        margin-left: 0%;
+        width: 100%;
         border: 2px solid black;
         border-collapse: collapse; 
     }
+
+    .scroll{
+        width: 500px;
+        margin-left: 10%;
+        overflow-y: scroll;
+    }
 }
 
-@media screen and (max-width: 600px){
-    
+
+@media screen and (max-width: 426px){
     header img{
-        margin-top: 20px;
-        width: 97px;
+        margin-top: 10px;
+        width: 100px;
     }
     
     .headerTitles{
@@ -303,63 +384,69 @@ table tr td{
     }
     
     .headerTitles h1{
-        font-size: 130%;
+        font-size: 100%;
         color: white;
         position: absolute;
-        margin-top: -103px;
-        margin-left: 100px;
+        margin-top: -100px;
+        margin-left: 110px;
         
     }
     
     .headerTitles h2{
-        font-size: 120%;
+        font-size: 95%;
         color: white;
         position: absolute;
         margin-top: -100px;
-        margin-left: 100px;
+        margin-left: 110px;
         font-weight: 100;
         
     }
     
     .headerTitles h3{
-        font-size: 95%;
+        font-size: 90%;
         color: white;
         position: absolute;
         margin-top: -100px;
-        margin-left: 100px;
+        margin-left: 110px;
         font-weight: 100;
         
     }
     
     .title h2{
-        margin-top: 10px;
-        font-size: 29px;
-        margin-left: 32%;
+        text-align: center;
+        font-size: 25px;
+        margin-top: 20px;
+        margin-bottom: 2%;
+        margin-left: 9%;
     }
+    
     .backbtn{
         float: right;
-        margin-top: -70px;
+        margin-top: -65px;
         margin-right: 10px;
-        padding: 10px 15px 10px 15px;
+        padding: 12px 15px 12px 15px;
         color: white;
         text-decoration: none;
         border: 2px solid black;
         border-radius: 10px;
-        font-size: 70%;
+        font-size: 12px;
     }
+
     table{
-        font-size: 20px;
-        margin-left: 0px;
+        font-size: 15px;
+        margin-left: 0%;
         width: 100%;
         border: 2px solid black;
         border-collapse: collapse; 
     }
 
     .scroll{
-        width: 600px;
-        height: 300px;
-        margin-top: 40px;
+        width: 400px;
+        margin-left: 2%;
         overflow-y: scroll;
-        margin-left: 0px;
     }
+
 }
+
+
+
