--- a/request_logs.css
+++ b/request_logs.css
@@ -4,20 +4,49 @@
     font-family: 'bookman old style';
 }
 
-
-
-/* HEADER */
 header{
-    width: 100%;
     height: 190px;
     background-color: #162fa0;  
     
 }
 
-
 header img{
     margin-top: 10px;
     width: 120px;
+}
+
+.headerTitles{
+    margin-top: -2.5%;
+    margin-left: .5%;
+}
+
+.headerTitles h1{
+    font-size: 130%;
+    color: white;
+    position: absolute;
+    margin-top: -125px;
+    margin-left: 118px;
+    
+}
+
+.headerTitles h2{
+    font-size: 120%;
+    color: white;
+    position: absolute;
+    margin-top: -120px;
+    margin-left: 120px;
+    font-weight: 100;
+    
+}
+
+.headerTitles h3{
+    font-size: 95%;
+    color: white;
+    position: absolute;
+    margin-top: -120px;
+    margin-left: 120px;
+    font-weight: 100;
+    
 }
 
 header h1{
