--- a/Accounts_inventory.css
+++ b/Accounts_inventory.css
@@ -365,10 +365,7 @@ ul li:hover ul.dropdown{
 .buttons{
     display: flex;
     justify-content: space-between;
-    margin: 100px;
-    
-    
-      
+    margin: 100px;   
 }
 
 .Register{
@@ -377,8 +374,7 @@ ul li:hover ul.dropdown{
     width: 25%;
     height: 30px;
     font-size: 15px;
-    
-
+    cursor: pointer;
 }
 .Close{
     margin-top: 200px;
@@ -386,7 +382,7 @@ ul li:hover ul.dropdown{
     width: 25%;
     height: 30px;
     font-size: 15px;
-    
+    cursor: pointer;
 }
 
 
@@ -438,7 +434,7 @@ ul li:hover ul.dropdown{
 /* Popup Edit Dropdown*/
 .dropdownedit{
     width: 300px;
-    height: 50px;
+    height: 40px;
     position: relative;
     margin-top: 10px;
     margin-left: 100px;
@@ -446,7 +442,7 @@ ul li:hover ul.dropdown{
     border: 2px solid black;
     border-radius: 5px;
     text-align: left;
-    font-size: 20px;
+    font-size: 15px;
     cursor: pointer;
 }
 
@@ -463,14 +459,15 @@ ul li:hover ul.dropdown{
 .User_Office label{
     font-size: 17px;
     margin-left: 75px;
+    margin-top: 55px;
 
 }
 
 .User_Office input{
     border: 2px solid black;
     width: 40%;
-    margin-left: 17px;
-    font-size: 17px;
+    margin-left: 52px;
+    font-size: 15px;
 }
 
 .User_Position{
@@ -490,7 +487,7 @@ ul li:hover ul.dropdown{
     width: 40%;
     margin-left: 180px;
     margin-top: 15px;
-    font-size: 17px;
+    font-size: 15px;
 }
 
 .Center_Code{
@@ -510,7 +507,7 @@ ul li:hover ul.dropdown{
     width: 40%;
     margin-left: 180px;
     margin-top: 15px;
-    font-size: 17px;
+    font-size: 15px;
 }
 
 .buttons2{
@@ -528,7 +525,7 @@ ul li:hover ul.dropdown{
     margin-left: 40px;
     width: 25%;
     height: 30px;
-
+    cursor: pointer;
 }
 .Close2{
     font-size: 15px;
@@ -537,6 +534,7 @@ ul li:hover ul.dropdown{
     margin-right: 20px;
     width: 25%;
     height: 30px;
+    cursor: pointer;
 }
 /* Popup Edit Description END*/
 
@@ -587,12 +585,12 @@ ul li:hover ul.dropdown{
 }
 .Delete{
     font-size: 20px;
-    width: 90px;
+    width: 100px;
     height: 50px;
+    border-radius: 15px;
     margin-top: 20px;
     margin-left: 210px;
     background: white;
-
 }
 .Delete:hover{
     background: red;
@@ -605,6 +603,7 @@ ul li:hover ul.dropdown{
     width: 70px;
     margin-top: 70px;
     margin-right: 30px;
+    cursor: pointer;
 }
 
 
@@ -715,7 +714,7 @@ table{
 }
 
 .user-office{
-    width: 500px;
+    width: 20%;
 }
 
 .align-useroffice{
@@ -759,6 +758,8 @@ table{
 table tr {
     text-align: left;
     border: 2px solid black;
+    height: 40px;
+    line-height: 20px;
 }
 
 
@@ -777,7 +778,7 @@ table tr td{
     margin-left: 10px;
     font-size: 18px;
     border: 2px solid black;
-    
+    line-height: 20px;
     
 }
 
