--- a/queuing system.css
+++ b/queuing system.css
@@ -18,7 +18,8 @@ header img{
 }
 
 .headerTitles{
-    margin-top: 0;
+    margin-top: -.3%;
+    margin-left: 1%;
 }
 
 .headerTitles h1{
@@ -60,7 +61,7 @@ header img{
 
 .backbtn{
     float: right;
-    margin-top: -100px;
+    margin-top: -120px;
     margin-right: 30px;
     padding: 15px 15px 15px 15px;
     color: white;
