--- a/queuing_release.css
+++ b/queuing_release.css
@@ -11,7 +11,7 @@ body {
 }
 
 header{
-    height: 90%;
+    height: 150px;
     background-color: #162fa0;  
     position: sticky;
     width: 100%;
@@ -21,10 +21,8 @@ header{
 
 
 header img{
-    margin-top: 5px;
+    margin-top: 10px;
     width: 120px;
-    position: sticky;
-    z-index: 998;
 }
 
 h1{
@@ -57,7 +55,8 @@ h3{
 }
 
 .headerTitles {
-    margin-top: 6%;
+    margin-top: 5%;
+    margin-left: 1%;
     z-index: 998;
 }
 
@@ -126,8 +125,8 @@ h3{
 
 .backbtn{
     float: right;
-    margin-top: 5%;
-    margin-right: 1%;
+    margin-top: 4.15%;
+    margin-right: 2%;
     padding: 15px 15px 15px 15px;
     color: white;
     text-decoration: none;
