--- a/usermanagementstyle.css
+++ b/usermanagementstyle.css
@@ -236,6 +236,7 @@ table{
 table tr {
     text-align: center;
     border: 2px solid black;
+    height: 40px;
 }
 
 table tr th{
@@ -245,12 +246,10 @@ table tr th{
     border: 2px solid black;
     top: 0px;
     position: sticky;
-    
-    
 }
 table tr td{
     border: 2px solid black;
-    
+    line-height: 20px;
 }
 .align-item-description{
     text-align: left;
@@ -537,36 +536,98 @@ table tr td{
 @media screen and (min-width: 2560px){
     .searchbar{
         position: absolute;
-        margin-left: 82%;
+        margin-left: 80%;
         margin-top: -38px; 
     }
-}
-@media screen and (max-width: 1440px){
-    .queuing{
-        position: absolute;
-        margin: 89px 0px 0px 68%; 
-        padding: 15px 0px 4px 0px;
-        width: 7%;
-        height: 4%;
-        border-radius: 7px;
-        background-color: #162fa0;
+    table{
+        font-size: 20px;
+        margin-left: 12%;
+        width: 87%;
         border: 2px solid black;
-        color: white;
-        text-decoration: none;
-        text-align: center;
-        font-size: 13px;
+        border-collapse: collapse; 
     }
-    .searchbar{
+    .sorting{
         position: absolute;
-        margin-left: 66%;
-        margin-top: -38px; 
+        font-size: 18px;
+        font-weight: bold;
+        margin: 10px 0px 0px 87%;
     }
 }
 
-@media screen and (max-width: 1367px){
+@media screen and (min-width: 2506px){
     .searchbar{
         position: absolute;
-        margin-left: 66%;
+        margin-left: 80%;
+        margin-top: -38px; 
+    }
+    table{
+        font-size: 20px;
+        margin-left: 12%;
+        width: 87%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+    .sorting{
+        position: absolute;
+        font-size: 18px;
+        font-weight: bold;
+        margin: 10px 0px 0px 87%;
+    }
+}
+
+@media screen and (min-width: 1920px){
+    .searchbar{
+        position: absolute;
+        margin-left: 74%;
+        margin-top: -38px; 
+    }
+    table{
+        font-size: 20px;
+        margin-left: 13%;
+        width: 87%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+    .sorting{
+        position: absolute;
+        font-size: 18px;
+        font-weight: bold;
+        margin: 10px 0px 0px 83%;
+    }
+    .scroll{
+        margin-top: 40px; 
+        overflow-y: scroll;
+        margin-left: -2%
+     }
+}
+
+@media screen and (min-width: 1880px){
+    .searchbar{
+        position: absolute;
+        margin-left: 74%;
+    }
+    table{
+        font-size: 20px;
+        margin-left: 12.5%;
+        width: 87%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+
+    .scroll{
+        margin-top: 40px; 
+        overflow-y: scroll;
+        margin-left: -2%
+     }
+}
+
+
+
+
+@media screen and (max-width: 1366px){
+    .searchbar{
+        position: absolute;
+        margin-left: 68%;
         margin-top: -38px; 
     }
     table{
@@ -576,11 +637,15 @@ table tr td{
         border: 2px solid black;
         border-collapse: collapse; 
     }
+    ul li a{
+        font-size: 11px;
+        padding: 15px 15px 15px 15px;
+    }
 
     .title h2{
         margin-top: -30px;
         font-size: 40px;
-        margin-left: 450px;
+        margin-left: 35%;
     }    
     .sorting{
         position: absolute;
@@ -648,14 +713,19 @@ table tr td{
 }
 
 @media screen and (max-width: 1024px){
+    .title h2{
+        margin-top: -30px;
+        font-size: 40px;
+        margin-left: 300px;
+    } 
     .searchbar{
         position: absolute;
-        margin-left: 63%;
+        margin-left: 64%;
         margin-top: -25px; 
     }
     .searchbar input{
         height: 25px;
-        width: 180px;
+        width: 150px;
      }
      nav{
         float: right;
@@ -666,15 +736,43 @@ table tr td{
 
     ul li a{
         display: block;
-        margin: 15px 0px 0px 0px;
+        margin: 20px 0px 0px 0px;
         padding: 12px 15px;
         color: white;
         text-decoration: none;
         text-align: center;
+        font-size: 10px;
         outline: 2px solid black;
         box-shadow: 2px darkblue;
         border-radius: 5px;
         box-sizing: border-box;
+    }
+    table{
+        font-size: 20px;
+        margin-left: 120px;
+        width: 87%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+    table tr {
+        text-align: center;
+        border: 2px solid black;
+        height: 40px;
+    }
+    table tr td{
+        border: 2px solid black;
+        line-height: 20px;
+    }
+    .scroll{
+        margin-top: 40px; 
+        margin-right: 20px;
+         overflow-y: scroll;    
+     }
+     .sorting{
+        position: absolute;
+        font-size: 18px;
+        font-weight: bold;
+        margin: 10px 0px 0px 790px;
     }
 
 }
@@ -809,7 +907,7 @@ table tr td{
     }
     .searchbar{
         position: absolute;
-        margin-left: 440px;
+        margin-left: 430px;
         margin-top: 5px; 
     }
     .searchbar input{
@@ -818,7 +916,7 @@ table tr td{
      }
      ul li a{
         display: block;
-        margin: 25px 0px 0px 0px;
+        margin: 28px 0px 0px 0px;
         padding: 8px 10px;
         color: white;
         text-decoration: none;
@@ -832,7 +930,7 @@ table tr td{
      .title h2{
         margin-top: -30px;
         font-size: 32px;
-        margin-left: 25%;
+        margin-left: 26%;
     }    
 
     table{
@@ -847,7 +945,7 @@ table tr td{
         position: absolute;
         font-size: 18px;
         font-weight: bold;
-        margin: 10px 0px 0px 74%;
+        margin: 10px 0px 0px 72%;
     }
 
     .sorting select{
